tests/comparison_hook_bad_signature.stderr
tests/comparison_hook_bad_signature.hop:2:1: error: HOP2049: invalid comparison hook signature
