tests/comparison_hook_bad_signature.hop
// Verifies comparison hook bad signature.
fn __equal(a int) bool {
	return true
}
